feat: implement create concept api, remove telegram, introduce SQL db
